# Projects

project/: test.txt
ralph-dashboard/: .gitignore  pyproject.toml  requirements.txt  run.sh  setup.sh
ralph-dashboard/docs/: ARCHITECTURE.md  INSTALLATION.md  USAGE.md
ralph-dashboard/ralph_dashboard/: __init__.py  __main__.py  app.py  chat_store.py  config.py  log_manager.py  models.py  ollama_client.py  process_manager.py  ralph_integration.py  system_monitor.py  task_manager.py  web_search.py
ralph-dashboard/ralph_dashboard/static/: index.html
ralph-dashboard/ralph_dashboard/static/css/: style.css
ralph-dashboard/ralph_dashboard/static/js/: api.js  app.js  chat.js  config.js  logs.js  performance.js  projects.js  tasks.js  websocket.js
ralph-dashboard/tests/: test_api.py  test_ralph_integration.py  test_system_monitor.py  test_task_manager.py
