[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-dashboard"
version = "0.1.0"
description = "GUI Dashboard for Ralph-TUI AI Agent Orchestrator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ralph Dashboard Contributors"},
]
keywords = ["ralph-tui", "dashboard", "ai-agents", "monitoring", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psutil>=5.9.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
gpu = ["GPUtil>=1.4.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
ralph-dashboard = "ralph_dashboard.__main__:main"

[project.urls]
Homepage = "https://github.com/ralph-dashboard/ralph-dashboard"
Repository = "https://github.com/ralph-dashboard/ralph-dashboard"

[tool.setuptools.packages.find]
include = ["ralph_dashboard*"]

[tool.setuptools.package-data]
ralph_dashboard = ["static/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
